--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -6,15 +6,25 @@
     height: 100vh;
   }
   
+  .title{
+    margin-bottom:30px;
+  }
   .main {
     background-color: #c0c0c0;
     border: 5px solid #008080;
     border-radius: 10px;
     box-shadow: 5px 5px 0 #a0a0a0;
     padding: 50px;
-    padding-left:70px;
-    padding-right:70px;
+    padding-left:100px;
+    padding-right:100px;
     text-align: center;
+  }
+
+  .center{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top:20px;
   }
   
   .logo {
@@ -30,17 +40,18 @@
   }
   
   .fieldset {
-    border: none;
-    margin: 0;
-    padding: 0;
+    display:flex;
+    margin-top:10px;
+    flex-direction: row;
+    align-items: center;
   }
   
   .label {
     color: #000;
-    font-size: 14px;
+    font-size: 17px;
     margin-right: 10px;
-    text-align: right;
-    width: 100px;
+    text-align: left;
+    width: 80px;
   }
   
   .input {
@@ -48,7 +59,7 @@
     border: 1px solid #000;
     border-radius: 3px;
     color: #000;
-    font-size: 14px;
+    font-size: 17px;
     padding: 3px;
     width: 200px;
   }
@@ -60,12 +71,32 @@
     color: #fff;
     cursor: pointer;
     font-size: 14px;
-    margin-top: 10px;
     padding: 3px 5px;
+    height:35px;
     transition: background-color 0.2s ease-in-out;
-    width: 50px;
+    width: 70px;
   }
-  
+
+  .register-button {
+    background-color: #008080;
+    border: 1px solid #000;
+    border-radius: 3px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    height:35px;
+    padding: 5px;
+    width: 70px;
+    font-family: Arial, sans-serif;
+  }
+  .error{
+    margin:0;
+    padding:0;
+  }
   .button:hover {
+    background-color: #006060;
+  }
+
+  .register-button:hover {
     background-color: #006060;
   }
