--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -61,7 +61,7 @@
     font-family: Arial, sans-serif;
   }
   
-  .button {
+  .register-page-button {
     background-color: #008080;
     border: 1px solid #000;
     border-radius: 3px;
@@ -69,9 +69,30 @@
     cursor: pointer;
     font-size: 14px;
     padding: 5px;
-    width: 100px;
     margin-top: 20px;
+    
+    width: 100px;
     font-family: Arial, sans-serif;
+  }
+
+  .register-page-back-button {
+    background-color: #008080;
+    border: 1px solid #000;
+    border-radius: 3px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 5px;
+    margin-top: 20px;
+    
+    width: 100px;
+    font-family: Arial, sans-serif;
+  }
+
+  .register-page-center-button{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
   
   .error {
