feat: Added sms verification and password reset passwords are also now hashed

--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -20,6 +20,17 @@
     text-align: center;
   }
 
+  .forgot-password-link{
+    font-size:small;
+  }
+  .links{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .verify-sms-link{
+    font-size:small;
+  }
   .center{
     display:flex;
     flex-direction: row;
