--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -9,7 +9,7 @@
 .home-div
 {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 40px);
   position: relative;
 }
 .size80
@@ -19,7 +19,9 @@
   width: 80%;
   height: 80%;
 }
-
+.home-content{
+  height: calc(100% - 65px);
+}
   .home-title{
     margin-bottom:30px;
   }
@@ -48,10 +50,6 @@
   }
   .home-navbar .menu button{
     height: 100%;
-  }
-
-  .home-navbar button:hover {
-    background-color: #006060;
   }
 
   .home-main {
