--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -12,8 +12,14 @@
   height: 100%;
   position: relative;
 }
-.size80
+.out-card-div
+{
+  padding: 10px;
+  padding: 10px;
+ width: fit-content;
+}
 
+.size80
 {
   position:relative;
   width: 80%;
