--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -105,6 +105,15 @@
     font-size: 14px;
     color: #000;
   }
+  .error {
+    width: 400px;
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+    word-wrap: break-word;
+    font-family: Arial, sans-serif;
+    max-width: 100%; 
+  }
   .radio-label{
     color: #000;
     font-size: 14px;
@@ -120,5 +129,6 @@
     color: red;
     font-size: 14px;
     margin-top: 10px;
+    word-wrap: break-word;
     font-family: Arial, sans-serif;
   }
