fix: Fixed problems with cookies not being sent properly

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -13,9 +13,12 @@
   height: fit-content;
   position: relative;
 }
-
+.home-content{
+  height:80vh;
+}
 .out-card-div
 {
+  height: 100%;
   padding: 10px;
   padding: 10px;
   display: flex;
